[tool.poetry]
name = "custom-jwt-auth"
version = "0.1.0"
description = "A custom api for handling JWT authorisation and authentication."
authors = ["Mukal Dadhwal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
PyJWT = "^2.8.0"
fastapi = "^0.104.1"
email-validator = "^2.1.1"
poetry-dotenv-plugin = "^0.2.0"
sqlalchemy = "^2.0.28"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
